--- a/MedienAbonnementManagerBackend/src/main/resources/application.properties
+++ b/MedienAbonnementManagerBackend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # PostgreSQL-Datenbankverbindung
 quarkus.datasource.db-kind=postgresql
-quarkus.datasource.username=myuser
-quarkus.datasource.password=mypassword
+quarkus.datasource.username=dipl
+quarkus.datasource.password=dipl
 quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/abomanagment
 
 # Optional: Schema automatisch erzeugen
