--- a/Frontend/mein-angular-projekt/package.json
+++ b/Frontend/mein-angular-projekt/package.json
@@ -29,7 +29,10 @@
     "@angular/platform-server": "^20.1.0",
     "@angular/router": "^20.1.0",
     "@angular/ssr": "^20.1.1",
+    "@tailwindcss/vite": "^4.0.0",
     "express": "^5.1.0",
+    "keycloak-angular": "^20.0.0",
+    "keycloak-js": "^26.2.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
@@ -38,6 +41,7 @@
     "@angular/build": "^20.1.1",
     "@angular/cli": "^20.1.1",
     "@angular/compiler-cli": "^20.1.0",
+    "@tailwindcss/postcss": "^4.1.16",
     "@types/express": "^5.0.1",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^20.17.19",
@@ -49,7 +53,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.10",
+    "tailwindcss": "^3.4.14",
     "typescript": "~5.8.2"
   }
 }
