--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,6 +4,15 @@ quarkus.datasource.username=myuser
 quarkus.datasource.password=mypassword
 quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/abomanagment
 
+quarkus.http.auth.permission.roles.paths=/api/*
+quarkus.http.auth.permission.roles.policy=authenticated
+
+quarkus.oidc.auth-server-url=http://localhost:8080/realms/media-manager
+quarkus.oidc.client-id=backend-service
+quarkus.oidc.credentials.secret=dein-client-secret
+quarkus.oidc.application-type=service
+
+
 # Optional: Schema automatisch erzeugen
 quarkus.hibernate-orm.database.generation=drop-and-create
 quarkus.hibernate-orm.log.sql=true
