--- a/Frontend/mein-angular-projekt/package.json
+++ b/Frontend/mein-angular-projekt/package.json
@@ -6,8 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "serve:ssr:mein-angular-projekt": "node dist/mein-angular-projekt/server/server.mjs"
+    "test": "ng test"
   },
   "prettier": {
     "overrides": [
