--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,21 +4,23 @@ quarkus.datasource.username=myuser
 quarkus.datasource.password=mypassword
 quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/abomanagment
 
-quarkus.http.auth.permission.roles.paths=/api/*
-quarkus.http.auth.permission.roles.policy=authenticated
-
-quarkus.oidc.auth-server-url=http://localhost:8080/realms/media-manager
-quarkus.oidc.client-id=backend-service
-quarkus.oidc.credentials.secret=dein-client-secret
-quarkus.oidc.application-type=service
-
-
 # Optional: Schema automatisch erzeugen
 quarkus.hibernate-orm.database.generation=drop-and-create
 quarkus.hibernate-orm.log.sql=true
 
 # CORS aktivieren
 quarkus.http.cors=true
+
+quarkus.http.auth.permission.roles.paths=/api/*
+quarkus.http.auth.permission.roles.policy=authenticated
+
+quarkus.http.auth.permission.public.paths=/api/movies/*
+quarkus.http.auth.permission.public.policy=permit
+
+quarkus.oidc.auth-server-url=http://localhost:8081/realms/MedienAbodementManager
+quarkus.oidc.client-id=quarkus-be
+quarkus.oidc.credentials.secret=frAx6yyRMuFfVv3nz4yB3KrSu4FYiY9T
+quarkus.oidc.application-type=service
 
 # Von welchem Origin erlaubt wird (Angular Dev-Server)
 quarkus.http.cors.origins=http://localhost:4200
