debug ressource und security ordern ausgeblendet sowie dependencies entfernt

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -11,15 +11,17 @@ quarkus.hibernate-orm.log.sql=true
 # CORS aktivieren
 quarkus.http.cors=true
 
-quarkus.http.auth.permission.roles.paths=/api/*
-quarkus.http.auth.permission.roles.policy=authenticated
-
+# 1. Definierte Ausnahme (Public)
 quarkus.http.auth.permission.public.paths=/api/movies/*
 quarkus.http.auth.permission.public.policy=permit
 
-quarkus.oidc.auth-server-url=http://localhost:8081/realms/MedienAbodementManager
-quarkus.oidc.client-id=quarkus-be
-quarkus.oidc.credentials.secret=frAx6yyRMuFfVv3nz4yB3KrSu4FYiY9T
+# 2. Alles andere unter /api/ schützen
+quarkus.http.auth.permission.api-protect.paths=/api/*
+quarkus.http.auth.permission.api-protect.policy=authenticated
+
+quarkus.oidc.auth-server-url=http://localhost:8081/realms/angular-realm
+quarkus.oidc.client-id=angular-client
+#quarkus.oidc.credentials.secret=frAx6yyRMuFfVv3nz4yB3KrSu4FYiY9T
 quarkus.oidc.application-type=service
 
 # Von welchem Origin erlaubt wird (Angular Dev-Server)
