Export Änderung neuer backend client hinzugefügt

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -19,9 +19,9 @@ quarkus.http.auth.permission.public.policy=permit
 quarkus.http.auth.permission.api-protect.paths=/api/*
 quarkus.http.auth.permission.api-protect.policy=authenticated
 
-quarkus.oidc.auth-server-url=http://localhost:8081/realms/MedienAbodementManager
-quarkus.oidc.client-id=quarkus
-quarkus.oidc.credentials.secret=frAx6yyRMuFfVv3nz4yB3KrSu4FYiY9T
+quarkus.oidc.auth-server-url=http://localhost:8081/realms/angular-realm
+quarkus.oidc.client-id=quarkus-be
+quarkus.oidc.credentials.secret=IzAXM3p1EBV28IDVZJc0mgloqCVIor6h
 quarkus.oidc.application-type=service
 
 # Von welchem Origin erlaubt wird (Angular Dev-Server)
