Provider route mit Klasse DTo und Repo hinzu gefügt.

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -12,7 +12,8 @@ quarkus.hibernate-orm.log.sql=true
 quarkus.http.cors=true
 
 # 1. Definierte Ausnahme (Public)
-quarkus.http.auth.permission.public.paths=/api/movies/*
+quarkus.http.auth.permission.public.paths=/api/movies/*, /api/provider/*
+
 quarkus.http.auth.permission.public.policy=permit
 
 # 2. Alles andere unter /api/ schützen
