durchs Reskripten sind 3 Funktionen kaputt

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -21,8 +21,8 @@ quarkus.http.auth.permission.api-protect.paths=/api/*
 quarkus.http.auth.permission.api-protect.policy=authenticated
 
 quarkus.oidc.auth-server-url=http://localhost:8081/realms/angular-realm
-quarkus.oidc.client-id=quarkus-be
-quarkus.oidc.credentials.secret=IzAXM3p1EBV28IDVZJc0mgloqCVIor6h
+quarkus.oidc.client-id=quarkus-client
+quarkus.oidc.credentials.secret=dreZ3y7rKwd2cmYKFsG0twGVkndFJ0Ry
 quarkus.oidc.application-type=service
 
 # Von welchem Origin erlaubt wird (Angular Dev-Server)
